<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_from"
                        android:layout_width="185dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/from_startingpoint"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.485"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_to"
                        android:layout_width="185dp"
                        android:layout_height="35dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/to_destination"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.485"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/button_expand"
                        android:layout_width="41dp"
                        android:layout_height="44dp"
                        android:text="@string/closeArrow"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.045"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.486"
                        tools:ignore="TouchTargetSizeCheck" />

                    <CheckBox
                        android:id="@+id/checkBoxFinishJourney"
                        android:layout_width="79dp"
                        android:layout_height="44dp"
                        android:text="@string/done_journey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.99"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.487"
                        tools:ignore="TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/expandableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="234dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="#88888888" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="53dp"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">


                        <Button
                            android:id="@+id/setNav1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:elevation="0dp"
                            android:text="@string/set_navigation"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textSize="10sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.89"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.4" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="210dp"
                            android:layout_height="50dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/setNav1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/walk_to_dock" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="53dp"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView13"
                            android:layout_width="210dp"
                            android:layout_height="50dp"
                            android:src="@drawable/cycle_from_dock"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/setNav2"
                            app:layout_constraintHorizontal_bias="0.491"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <Button
                            android:id="@+id/setNav2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:elevation="0dp"
                            android:text="@string/set_navigation"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textSize="10sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.89"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView14"
                            android:layout_width="210dp"
                            android:layout_height="50dp"
                            android:src="@drawable/walk_from_dock"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/setNav3"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="1.0" />

                        <Button
                            android:id="@+id/setNav3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:elevation="0dp"
                            android:text="@string/set_navigation"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textSize="10sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.89"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
