...
            <Button
                android:id="@+id/addingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Stop"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/nextPageButton"
                app:layout_constraintStart_toEndOf="@+id/myLocationButton"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/myLocationButton"
                android:layout_width="wrap_content"
...
